--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 # TODO
 
-## ESLint Plugins
+## ESLint Rules
 
-- [ ] [eslint-plugin-compat](https://github.com/amilajack/eslint-plugin-compat)
+- [ ] [eslint](https://github.com/eslint/eslint/tree/main)
 - [x] [eslint-plugin-eslint-comments](https://github.com/mysticatea/eslint-plugin-eslint-comments)
 - [ ] [eslint-plugin-graphql](https://github.com/apollographql/eslint-plugin-graphql)
 - [ ] [eslint-plugin-i18next](https://github.com/edvardchen/eslint-plugin-i18next)
@@ -10,9 +10,8 @@
 - [x] [eslint-plugin-inclusive-language](https://github.com/muenzpraeger/eslint-plugin-inclusive-language)
 - [x] [eslint-plugin-jest](https://github.com/jest-community/eslint-plugin-jest)
 - [x] [eslint-plugin-jest-formatting](https://github.com/dangreenisrael/eslint-plugin-jest-formatting)
-- [ ] [eslint-plugin-json](https://github.com/azeemba/eslint-plugin-json)
 - [ ] [eslint-plugin-jsx-a11y](https://github.com/jsx-eslint/eslint-plugin-jsx-a11y)
-- [ ] [eslint-plugin-node](https://github.com/mysticatea/eslint-plugin-node)
+- [x] [eslint-plugin-n](https://github.com/eslint-community/eslint-plugin-n)
 - [x] [eslint-plugin-promise](https://github.com/eslint-community/eslint-plugin-promise)
 - [ ] [eslint-plugin-react](https://github.com/jsx-eslint/eslint-plugin-react)
 - [ ] [eslint-plugin-security](https://github.com/eslint-community/eslint-plugin-security)
@@ -23,7 +22,12 @@
 - [ ] [eslint-stylistic](https://github.com/eslint-stylistic/eslint-stylistic)
 - [ ] [typescript-eslint](https://github.com/typescript-eslint/typescript-eslint)
 
-## Stylelint Plugins
+### Other interesting plugins
+
+- [eslint-plugin-compat](https://github.com/amilajack/eslint-plugin-compat)
+- [eslint-plugin-json](https://github.com/azeemba/eslint-plugin-json)
+
+## Stylelint Rules
 
 - [ ] stylelint-config-property-sort-order-smacss
 - [ ] stylelint-config-standard-scss
