--- a/TODO
+++ b/TODO
@@ -1,50 +1,53 @@
 # TODO
 
-## ESLint Rules
+- [ ] Upgrade Yarn (update install command in GH action)
+- [ ] `README.md` - Documentation
+  - [ ] ignore-dirs and ignore-patterns (`.eslintignore`, `.stylelintignore`)
+
+## Config
+
+- [ ] Review ESLint rules.
+  - [ ] [eslint-plugin-eslint-comments](https://github.com/mysticatea/eslint-plugin-eslint-comments)
+  - [ ] [eslint-plugin-inclusive-language](https://github.com/muenzpraeger/eslint-plugin-inclusive-language)
+  - [ ] [eslint-plugin-jest](https://github.com/jest-community/eslint-plugin-jest)
+  - [ ] [eslint-plugin-n](https://github.com/eslint-community/eslint-plugin-n)
+  - [ ] [eslint-plugin-promise](https://github.com/eslint-community/eslint-plugin-promise)
+  - [ ] [eslint-plugin-sort-destructure-keys](https://github.com/mthadley/eslint-plugin-sort-destructure-keys)
+  - [ ] [eslint-plugin-sort-exports](https://github.com/jrdrg/eslint-plugin-sort-exports)
+- [ ] Review Stylelint rules.
+  - [ ] `stylelint-declaration-strict-value`
+  - [ ] `stylelint-order`
+  - [ ] `stylelint-scss`
+  - [ ] `stylelint`
+  - [ ] `stylistic`
+- [ ] Review Markdownlint rules.
+- [ ] Support different configurations to use and extend;
+  - Core
+  - React
+  - TypeScript
+  - Jest
+  - Stylistic/Prettier
+
+### ESLint Plugins
 
 - [ ] [eslint](https://github.com/eslint/eslint/tree/main)
-- [x] [eslint-plugin-eslint-comments](https://github.com/mysticatea/eslint-plugin-eslint-comments)
 - [ ] [eslint-plugin-graphql](https://github.com/apollographql/eslint-plugin-graphql)
 - [ ] [eslint-plugin-i18next](https://github.com/edvardchen/eslint-plugin-i18next)
 - [ ] [eslint-plugin-import](https://github.com/import-js/eslint-plugin-import)
-- [x] [eslint-plugin-inclusive-language](https://github.com/muenzpraeger/eslint-plugin-inclusive-language)
-- [x] [eslint-plugin-jest](https://github.com/jest-community/eslint-plugin-jest)
-- [x] [eslint-plugin-jest-formatting](https://github.com/dangreenisrael/eslint-plugin-jest-formatting)
 - [ ] [eslint-plugin-jsx-a11y](https://github.com/jsx-eslint/eslint-plugin-jsx-a11y)
-- [x] [eslint-plugin-n](https://github.com/eslint-community/eslint-plugin-n)
-- [x] [eslint-plugin-promise](https://github.com/eslint-community/eslint-plugin-promise)
 - [ ] [eslint-plugin-react](https://github.com/jsx-eslint/eslint-plugin-react)
 - [ ] [eslint-plugin-security](https://github.com/eslint-community/eslint-plugin-security)
-- [x] [eslint-plugin-sort-destructure-keys](https://github.com/mthadley/eslint-plugin-sort-destructure-keys)
-- [x] [eslint-plugin-sort-exports](https://github.com/jrdrg/eslint-plugin-sort-exports)
 - [ ] [eslint-plugin-testing-library](https://github.com/testing-library/eslint-plugin-testing-library)
 - [ ] [eslint-plugin-unicorn](https://github.com/sindresorhus/eslint-plugin-unicorn)
 - [ ] [eslint-stylistic](https://github.com/eslint-stylistic/eslint-stylistic)
 - [ ] [typescript-eslint](https://github.com/typescript-eslint/typescript-eslint)
 
-### Other interesting plugins
+## Misc
+
+- [ ] Test deprecation warnings in stylelint
+- [ ] Investigate using [`terminal-link`](https://www.npmjs.com/package/terminal-link) to add links to each failed rule
+
+## ESLint Plugins Considered
 
 - [eslint-plugin-compat](https://github.com/amilajack/eslint-plugin-compat)
 - [eslint-plugin-json](https://github.com/azeemba/eslint-plugin-json)
-
-## Stylelint Rules/Config
-
-- [x] @stylistic/stylelint-plugin
-- [x] stylelint
-- [x] stylelint-declaration-strict-value
-- [x] stylelint-order
-- [x] stylelint-scss
-- [x] stylelint-config-property-sort-order-smacss
-
-## Configuration Files
-
-- [ ] React-specific
-- [ ] Typescript-specific
-- [ ] Jest-specific
-- [ ] Stylistic-specific
-
-## Misc
-
-- [ ] Documentation
-  - [ ] ignore-dirs and ignore-patterns (`.eslintignore`, `.stylelintignore`)
-- [ ] Test deprecation warnings in stylelint
